[gd_scene load_steps=5 format=2]

[ext_resource path="res://entites/enemys/boss/Boss.gd" type="Script" id=1]
[ext_resource path="res://assets/graphic/sprites/enemys/Boss/spritesheets/mage-3-87x110.png" type="Texture" id=2]

[sub_resource type="Animation" id=2]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.12, 0.25, 0.38 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.00784314, 0.00784314, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0.00784314, 0.00784314, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[node name="Boss" type="KinematicBody2D"]
position = Vector2( 57.9632, -5.00452 )
rotation = 0.00398407
collision_layer = 0
collision_mask = 3
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
flip_h = true
vframes = 2
hframes = 4
frame = 4

[node name="Body" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -3.5, 39.4, -3.5, 46, -1.8, 46, 0.5, 47.5, 0.5, 48.7, -2.7, 52.9, -2.1, 54, 3.5, 54, 3.5, 51.8, 3.1, 51, 4.7, 44, 2.9, 44, 1.5, 42.6, 1.5, 41.6, 3.5, 40.6, 3.5, 34, 2.3, 34, 1.8, 32, 4.1, 28, 6, 28, 7.8, 30.3, 5.5, 32.6, 5.5, 38, 7.1, 38, 8.5, 39.4, 5.5, 41.5, 5.5, 45, 7.3, 45, 10.5, 46.6, 10.5, 44, 12.9, 37, 10.7, 37, 9.5, 36.4, 10.1, 36, 11.1, 34, 14.4, 34, 22.5, 35.2, 22.5, 33.5, 26.5, 30.5, 26.5, 28.3, 28, 26, 30.5, 26, 30.5, 23, 25.5, 23, 25.5, 24.6, 20.1, 30, 15.8, 30, 12.5, 27.5, 12.5, 24, 13.8, 24, 15.8, 29, 19.9, 29, 23.5, 25.4, 23.5, 22.3, 22.5, 22, 22.5, 20, 23.9, 16, 21.9, 16, 20.7, 14.8, 25.5, 16.4, 25.5, 14.2, 27.1, 11, 24.1, 11, 23.1, 9, 19.1, 9, 17.5, 10.6, 17.5, 12.8, 16.2, 15.3, 12.5, 11.6, 12.5, 10, 13.4, 5, 14, 5, 18, 0, 20.5, 0, 23, 4, 25.2, 4, 31.2, 8, 33.6, 8, 38.5, 6.8, 38.5, 5.5, 42.5, 2.5, 42.5, -2.2, 39.1, -9, 33.1, -9, 32, -7.9, 31.4, -8.5, 33.3, -17, 34.8, -17, 42.5, -22.5, 42.5, -27.2, 42.1, -28, 42.5, -31, 41, -31, 39, -34, 37.5, -34, 37.5, -37, 34.5, -37, 34.5, -33.6, 28.5, -30.6, 28.5, -28.8, 29.1, -27.1, 22.5, -27.9, 22.5, -31.8, 17.5, -32.8, 17.5, -33.4, 19.5, -34.4, 19.5, -38, 18.6, -38, 18.2, -39, 12.6, -39, 12.2, -40, 8.7, -40, 9.5, -40.4, 9.5, -45, 8.1, -45, 12.7, -48.7, 12.2, -50, 10.9, -50, 8.9, -52, 3.5, -52, 7.5, -53.2, 7.5, -55, 1.5, -55, 0.5, -54.8, 0.5, -53.2, -1.1, -50, 1.3, -50, 6.5, -49.1, 2.3, -49, -3.5, -46.7, -3.5, -45.4, -5.9, -43, -7, -45.2, -8.5, -44.8, -8.5, -39.8, -8.2, -39.3, -11.5, -40.4, -11.5, -37.6, -10.9, -37, -12.1, -37, -15.1, -40, -19.5, -40, -19.5, -37, -17.5, -37, -15, -33, -12.9, -33, -11.5, -31.6, -11.5, -26, -12.7, -26, -13.6, -25.5, -15.1, -27, -12.5, -27, -12.5, -31, -17.2, -31, -19.1, -25.2, -21, -28, -22.5, -28, -22.5, -30, -27.5, -30, -27.5, -33, -28.9, -33, -29.9, -35, -32.5, -35, -32.5, -36.5, -36.2, -39, -37.9, -39, -43.5, -34.5, -43.5, -25, -42.1, -25, -41.1, -23, -39.5, -23, -40.7, -17, -37.8, -17, -36.8, -20, -35.5, -20, -35.5, -18.5, -30.5, -14.5, -30.5, -11.8, -30, -10.9, -33.5, -12.6, -33.5, -10.6, -39.5, -7.6, -39.5, -5, -40.8, 0, -39, 0, -36, 4, -33.5, 4, -29.5, 5.4, -27.5, 5, -24.7, 8.2, -23.5, 7.7, -23.5, 2.8, -23.9, 2, -22.9, 0, -18.5, 0, -15.5, 2.5, -15.5, 3.4, -17.5, 2.4, -17.5, 5.4, -15.9, 7, -13.1, 7, -10.4, 4.3, -9.3, 10, -5.1, 10, -3.1, 8, -2.5, 8.4, -2.5, 9.5, -9, 17, -10.8, 17, -15.8, 20, -18.9, 20, -21, 15.8, -22.5, 16.2, -22.5, 22.6, -15.5, 26.6, -15.5, 30.6, -15.9, 31, -17.7, 31, -18.5, 31.4, -28.5, 28.7, -28.5, 30.2, -30.5, 30.7, -27.9, 25, -30.3, 25, -33.5, 23.4, -33.5, 33, -31.7, 33, -26.5, 34.3, -26.5, 32.7, -25.5, 32.3, -25.5, 33.5, -20.8, 37, -16.2, 37, -13.2, 34.8, -8, 42, -4.5, 42, -4.5, 40.2, -2.9, 37, -1.5, 38.4 )

[node name="AnimationEnemy2" type="AnimationPlayer" parent="."]
anims/take_damage = SubResource( 2 )

[node name="AnimationEnemy" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 3 )

[node name="HitBox" type="Area2D" parent="."]
position = Vector2( -0.950397, 4.08742 )
collision_layer = 16
collision_mask = 2
__meta__ = {
"_edit_group_": true
}

[node name="Timers" type="Node" parent="."]
editor/display_folded = true

[node name="DelayAfterDamageTime" type="Timer" parent="Timers"]
wait_time = 0.4
one_shot = true

[node name="DelayMove" type="Timer" parent="Timers"]
wait_time = 2.0
one_shot = true
autostart = true

[node name="MoveTime" type="Timer" parent="Timers"]
one_shot = true

[node name="MoveDistance" type="Timer" parent="Timers"]
wait_time = 12.0
one_shot = true
autostart = true

[node name="Tentacle" type="KinematicBody2D" parent="."]
[connection signal="animation_finished" from="AnimationEnemy2" to="." method="_on_AnimationEnemy2_animation_finished"]
[connection signal="animation_finished" from="AnimationEnemy" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="area_exited" from="HitBox" to="." method="_on_HitBox_area_exited"]
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
[connection signal="body_exited" from="HitBox" to="." method="_on_HitBox_body_exited"]
